--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,6 +7,7 @@ header {
 	top: 0;
 	left: 0;
 	right: 0;
-	background-color: #ccdadd;
-	z-index: 0;
+
+	background-color: var(--bgColor, #ccdadd);
+	z-index: 100;
 }
